package ru.itmo.movies.model;

public enum Color {
    RED,
    BLACK,
    BROWN
}
