package ru.itmo.movies.model;

public enum Country {
    UNITED_KINGDOM,
    GERMANY,
    FRANCE,
    THAILAND
}
