package ru.itmo.movies.model;

public enum MovieGenre {
    ACTION,
    WESTERN,
    TRAGEDY,
    THRILLER
}
